CORE-4222: Fixing footer related bug on mobile.

--- a/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/footer/_footer-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/footer/_footer-primary.scss
@@ -297,3 +297,18 @@ html[lang=ar] {
     }
   }
 }
+
+.c-footer-primary,
+.only-first-time {
+  .language-switcher-language-url {
+    ul {
+      li {
+        &.ar {
+          a {
+            font-family: $vs-arabic-regular;
+          }
+        }
+      }
+    }
+  }
+}
